objects/Partner_Landscape__c/Partner_Landscape__c.object-meta.xml
<CustomObject>
    <label>Partner/Vendor Landscape</label>
    <nameField>
        <label>Partner Landscape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner/Vendor Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>