objects/Partner_Landscape__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner/Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>