objects/Partner_Landscape__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner/Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technology Vendor</fullName>
            </value>
            <value>
                <fullName>Infrastructure Vendor</fullName>
            </value>
            <value>
                <fullName>Preferred Cloud Provider</fullName>
            </value>
            <value>
                <fullName>Preferred Reseller</fullName>
            </value>
            <value>
                <fullName>Client Financial Auditor</fullName>
            </value>
            <value>
                <fullName>Managed Service Provider</fullName>
            </value>
            <value>
                <fullName>Other Partners</fullName>
            </value>
            <value>
                <fullName>Advisory / System Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>