objects/Partner_Landscape__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Services</label>
    <type>TextArea</type>
</CustomField>